force include resources in native build

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,7 @@ quarkus.swagger-ui.always-include=true
 quarkus.native.additional-build-args=--initialize-at-build-time
 quarkus.native.resources.includes=reflection-config.json
 
+quarkus.native.resources.includes=i8n/*.json
+
 quarkus.index-dependency.startpunkt.group-id=us.ullberg
 quarkus.index-dependency.startpunkt.artifact-id=startpunkt
