--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,11 @@ quarkus.http.test-timeout=60s
 
 quarkus.native.resources.includes=i8n/*.json
 quarkus.swagger-ui.always-include=true
+
+quarkus.native.additional-build-args=--initialize-at-build-time
+quarkus.native.resources.includes=reflection-config.json
+
+quarkus.native.resources.includes=i8n/*.json
+
+quarkus.index-dependency.startpunkt.group-id=us.ullberg
+quarkus.index-dependency.startpunkt.artifact-id=startpunkt
